src/tests/snapshots/gitu__tests__merge__merge_ff_only.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 46c81ca main other-branch add new-file                                         |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge --ff-only other-branch                                              |
styles_hash: 133db56f86f0cca9
