src/tests/snapshots/gitu__tests__merge__merge_menu.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Merge                Arguments                                                 |
 m       merge        -f Fast-forward only (--ff-only)                          |
 a       abort        -n No fast-forward (--no-ff)                              |
 c       continue                                                               |
 q/<esc> Quit/Close                                                             |
styles_hash: b52bb79b8bcfcbe1
