src/tests/snapshots/gitu__tests__merge__merge_no_ff.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 4d7c2d6 main Merge branch 'other-branch'                                       |
 b66a0bf origin/main add initial-file                                           |
 46c81ca other-branch add new-file                                              |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge --no-ff other-branch                                                |
styles_hash: 4cc5000fcd64c80b
