src/tests/snapshots/gitu__tests__merge__merge_picker_custom_input.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 0/7   Merge › HEAD~2█                                                          |
▌HEAD~2                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f3b2c1b1800106aa
