src/tests/snapshots/gitu__tests__merge__merge_picker_duplicate_names_select_branch.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 46369c5 main other v1.0.0 add other commit                                     |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge v1.0.0                                                              |
warning: refname 'v1.0.0' is ambiguous.                                         |
warning: refname 'v1.0.0' is ambiguous.                                         |
styles_hash: a2539b5cf05487da
