src/tests/snapshots/gitu__tests__merge__merge_picker_duplicate_names_select_tag.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 46369c5 main other v1.0.0 add other commit                                     |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge refs/tags/v1.0.0                                                    |
styles_hash: 7a43bbdd656e23e6
