src/tests/snapshots/gitu__tests__merge__merge_use_custom_input.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge b66a0bf82020d6a386e94d0fceedec1f817d20c7                            |
styles_hash: 1d7eaea778f92b02
